@@ -18,6 +18,7 @@ ext {
 repositories {
     if (no_nexus) {
         println("using repositories 'jcenter' and 'mavenCentral'")
+        mavenLocal()
         jcenter()
         mavenCentral()
         maven {
@@ -72,19 +73,25 @@ dependencies {
     implementation "fr.opensagres.xdocreport:fr.opensagres.poi.xwpf.converter.pdf:2.0.2"
     implementation "net.lingala.zip4j:zip4j:2.1.1"
     implementation "org.apache.ivy:ivy:2.2.0"
-    implementation "org.apache.pdfbox:pdfbox:2.0.17"
+    implementation "org.apache.pdfbox:pdfbox:2.0.23"
     implementation "org.apache.poi:poi:4.0.1"
     implementation "org.yaml:snakeyaml:1.24"
     implementation 'com.vladsch.flexmark:flexmark-all:0.60.2' // for markdown to pdf conversion (sonarqube reports)
+    implementation 'com.xlson.groovycsv:groovycsv:1.3'
 
     testImplementation "org.spockframework:spock-core:1.3-groovy-2.4"
-    testImplementation "com.lesfurets:jenkins-pipeline-unit:1.3"
+    testImplementation ("com.athaydes:spock-reports:1.6.0") { transitive = false }
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.19.0'
+    testImplementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+    testImplementation "com.lesfurets:jenkins-pipeline-unit:1.9"
     testImplementation "net.bytebuddy:byte-buddy:1.10.8"
     testImplementation "org.objenesis:objenesis:3.1"
     testImplementation "cglib:cglib-nodep:3.3.0"                      // for mocking classes
     testImplementation "com.github.stefanbirkner:system-rules:1.19.0" // for managing environment variables
-    testImplementation "com.github.tomakehurst:wiremock:2.26.0"       // for mocking HTTP server reponses
+    testImplementation "com.github.tomakehurst:wiremock:2.27.0"       // for mocking HTTP server reponses
+    testImplementation "com.github.tomakehurst:wiremock-jre8:2.29.0" // for mocking HTTP server reponses
     testImplementation "org.hamcrest:hamcrest:2.1"
+    testImplementation "org.skyscreamer:jsonassert:1.5.0"             // JSON Asserts
 }
 
 sourceSets {
@@ -112,6 +119,21 @@ test {
     testLogging {
         showStandardStreams = true
     }
+    systemProperty 'com.athaydes.spockframework.report.projectName', 'ods-jenkins-shared-library'
+    systemProperty 'com.athaydes.spockframework.report.projectVersion', version
+    maxHeapSize = "2048m"
+    jvmArgs "-XX:MaxPermSize=256m"
+    systemProperty "testRecordMode", project.findProperty('testRecordMode')?: false
+    systemProperty "generateExpectedPdfFiles", project.findProperty('generateExpectedPdfFiles')?: false
+    systemProperty "nexusURL", project.findProperty('nexusURL')?: "http://nexus.odsbox.lan:7990"
+    systemProperty "sonarQuURL", project.findProperty('sonarQuURL')?: "http://sonar.odsbox.lan:7990"
+    systemProperty "bitbucketURL", project.findProperty('bitbucketURL')?: "http://bitbucket.odsbox.lan:7990"
+    systemProperty "docGenURL", project.findProperty('docGenURL')?: "http://docgen.odsbox.lan:8080"
+    systemProperty "jiraURL", project.findProperty('jiraURL')?: "http://jira.odsbox.lan:8080"
+    systemProperty "domainUser", project.findProperty('domainUser')?: "openshift"
+    systemProperty "domainPassword", project.findProperty('domainPassword')?: "openshift"
+    systemProperty "nexusUser", project.findProperty('nexusUser')?: "openshift"
+    systemProperty "nexusPassword", project.findProperty('nexusPassword')?: "openshift"
 }
 
 codenarc {
@@ -119,10 +141,17 @@ codenarc {
     configFile = file('codenarc.groovy')
     maxPriority1Violations = 0
     maxPriority2Violations = 0
-    maxPriority3Violations = 321
+    maxPriority3Violations = 324
     reportFormat = 'html'
 }
 
+/**
+ The CodeNarc plugin adds the following tasks to the project:
+ - codenarcMain — Runs CodeNarc against the production Groovy source files.
+ - codenarcTest — Runs CodeNarc against the test Groovy source files.
+ - codenarcSourceSet — Runs CodeNarc against the given source set’s Groovy source files.
+ Run locally by executing e.g. 'gradle codenarcMain', the report can be found in ./build/reports/codenarc.
+ */
 codenarcTest {
     ignoreFailures = true
 }
